// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsolidatedBarChart when data is loaded and the expected key does not exist in the loaded data renders a component without data 1`] = `
<DocumentFragment>
  <figure
    id="chart_browser"
  >
    <div
      class="data chart__bar-chart margin-top-4"
    />
  </figure>
</DocumentFragment>
`;

exports[`ConsolidatedBarChart when data is loaded and the expected key exists in the loaded data and the data items is greater than the max items param renders a component with data loaded with the max number of items including an 'other' item 1`] = `
<DocumentFragment>
  <figure
    id="chart_browser"
  >
    <div
      class="data chart__bar-chart margin-top-4"
    >
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Chrome
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          48.5%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 49%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Safari
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          35.7%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 36%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Edge
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          8.8%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 9%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Firefox
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.9%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 2%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Safari (in-app)
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.9%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 2%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Samsung Internet
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.4%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Android Webview
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Opera
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Amazon Silk
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.1%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Other
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.4%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`ConsolidatedBarChart when data is loaded and the expected key exists in the loaded data and the data items is less than the max items param renders a component with data loaded without an 'other' item 1`] = `
<DocumentFragment>
  <figure
    id="chart_browser"
  >
    <div
      class="data chart__bar-chart margin-top-4"
    >
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Chrome
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          48.7%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 49%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Safari
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          35.8%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 36%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Edge
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          8.8%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 9%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Firefox
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.9%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 2%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Safari (in-app)
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.9%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 2%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Samsung Internet
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.4%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Android Webview
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Opera
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
        >
          Amazon Silk
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.1%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5"
          style="width: 0%;"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`ConsolidatedBarChart when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <figure
    id="chart_browser"
  >
    <div
      class="data chart__bar-chart margin-top-4"
    />
  </figure>
</DocumentFragment>
`;

exports[`ConsolidatedBarChart when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <figure
    id="chart_browser"
  >
    <div
      class="data chart__bar-chart margin-top-4"
    />
  </figure>
</DocumentFragment>
`;
